IFS-1984 Project setup pages for user testing

--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-1984-ps-dashboard.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-1984-ps-dashboard.html
@@ -101,7 +101,7 @@
                     <li class="waiting">
                         <div class="task">
                             <h2 class="heading-small">
-                                <a href="#">Project details</a>
+                                <a href="/prototypes/IFS-1984-project-details">Project details</a>
                             </h2>
                             <p class="no-margin">
                                 Your partners must provide a finance contact for their organisation.
@@ -171,7 +171,7 @@
                     <li class="complete">
                         <div class="task">
                             <h2 class="heading-small">
-                                <a href="#">Project details</a>
+                                <a href="/prototypes/IFS-1984-project-details">Project details</a>
                             </h2>
                             <p class="no-margin">
                                 Your project details are complete. You can edit these up until the spend profile is generated.
