IFS-2904 Updating text attribute to number for application search

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/dashboard.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/dashboard.html
@@ -10,7 +10,7 @@
         <div class="column-half alignright">
             <div class="form-search" th:if="${showSearch == null || showSearch == true}">
                 <label class="visuallyhidden" for="searchQuery">Search for:</label>
-                <input type="search"
+                <input th:type="${searchType == 'applications' ? 'number' : 'text'}"
                        th:value="${searchQuery}"
                        th:name="${searchType == 'applications' ? 'searchString' : 'searchQuery'}"
                        id="searchQuery"
