--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-1984-ps-dashboard.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-1984-ps-dashboard.html
@@ -36,7 +36,7 @@
             <ul class="list list-bullet">
                 <li><a href="#">view application feedback</a></li>
                 <li><a href="#">view the grant terms and conditions</a></li>
-                <li><a href="#">view project details</a></li>
+                <li><a href="/prototypes/IFS-1984-project-details">view project details</a></li>
             </ul>
         </div>
     </div>
@@ -98,7 +98,7 @@
 
             <div class="progress-list progress-list--individual-blocks">
                 <ul>
-                    <li class="waiting">
+                    <li class="waiting" th:if="${param.status == null or param.status[0] == 'detailsNotComplete'}">
                         <div class="task">
                             <h2 class="heading-small">
                                 <a href="/prototypes/IFS-1984-project-details">Project details</a>
@@ -168,7 +168,7 @@
 
             <div class="progress-list progress-list--individual-blocks">
                 <ul>
-                    <li class="complete">
+                    <li class="complete" th:if="${param.status != null and param.status[0] == 'detailsComplete'}">
                         <div class="task">
                             <h2 class="heading-small">
                                 <a href="/prototypes/IFS-1984-project-details">Project details</a>
