--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/admin/users.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/admin/users.html
@@ -5,6 +5,8 @@
 </head>
 <body class="competition-management">
 
+<th:block th:insert="fragments/modals :: modal-overlay" />
+<th:block th:insert="fragments/modals :: modal-resend-internal-user" />
 <th:block th:insert="fragments/layout :: body-start" />
 <th:block th:insert="fragments/layout :: global-header" />
 
