--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/admin-users.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/admin-users.html
@@ -45,9 +45,11 @@
                 <td th:text="${invite.getRoleDisplayName()}">IFS Admin</td>
                 <td><a th:href="${'mailto:' + invite.email}" th:text="${invite.email}">steve.smith@empire.com</a></td>
                 <td>
-                    <form th:action="@{/admin/users/pending/resend-invite}" method="post">
-                        <input type="hidden" name="inviteId" th:value="${invite.id}" />
-                        <input type="submit" class="button button-secondary" value="Resend invite" />
+                    <form th:action="@{${#ifsUtil.formPostUri(#httpServletRequest)}}" method="post">
+                        <button type="submit"
+                                class="button button-secondary"
+                                data-js-modal="modal-resend-internal-user"
+                                th:attr="data-modal-form-action=@{/admin/users/pending/resend-invite},data-modal-input-invite-id=${invite.id}">Resend invite</button>
                     </form>
                 </td>
             </tr>
