IFS-2989 - Initial commit removing enum function

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-elements.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-elements.html
@@ -224,18 +224,18 @@
             TODO: IFS-2565 - Change to use 'allowedFileTypes' instead of 'allowedFileTypesEnum' in ZDD migrate (contract: step 1)
             */-->
             <div  id="allowedFileTypesDiv" class="form-group panel" th:if="${question.appendix != null}">
-                <div class="form-group" th:classappend="${#fields.hasErrors('question.allowedFileTypesEnum')} ? 'form-group-error'">
+                <div class="form-group" th:classappend="${#fields.hasErrors('question.allowedFileTypes')} ? 'form-group-error'">
                     <fieldset>
-                        <legend id="question.allowedFileTypesEnum">
+                        <legend id="question.allowedFileTypes">
                             <span class="form-label-bold">Accepted appendix file types</span>
-                            <th:block th:if="${#fields.hasErrors('question.allowedFileTypesEnum')}">
-                                <span class="error-message"  th:each="err : ${#fields.errors('question.allowedFileTypesEnum')}" th:text="${err}" ></span>
+                            <th:block th:if="${#fields.hasErrors('question.allowedFileTypes')}">
+                                <span class="error-message"  th:each="err : ${#fields.errors('question.allowedFileTypes')}" th:text="${err}" ></span>
                             </th:block>
                         </legend>
                         <div class="multiple-choice" th:each="fileTypeCategory : ${question.getSupportedTypeCategories()}">
                             <input type="checkbox"
                                    th:id="${'allowed-file-types-' + fileTypeCategory.displayName}"
-                                   th:field="*{question.allowedFileTypesEnum}"
+                                   th:field="*{question.allowedFileTypes}"
                                    th:value="${fileTypeCategory.name()}"
                                    name="allowedFileTypes"
                                    required="required"
