IFS-2989 - Fixed problem caught be acceptance tests

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-elements.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-elements.html
@@ -32,7 +32,7 @@
                         <dd class="column-two-thirds">
                             <ul>
                                 <li th:each="fileType : ${question.allowedFileTypes}"
-                                    th:text="${fileType}"></li>
+                                    th:text="${fileType.displayName}"></li>
                             </ul>
                         </dd>
                         <dt class="column-third">Appendix guidance</dt>
