--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-1984-ps-dashboard-steps.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-1984-ps-dashboard-steps.html
@@ -41,10 +41,15 @@
         </div>
     </div>
 
-    <div class="message-alert">
+    <div class="message-alert" th:unless="${param.status[0] == 'step9'}">
         <p>You must complete the following tasks to finish setting up your project.</p>
         <p>All project partners have individual steps to complete in this section.</p>
         <p><a href="#">View the status of partners.</a></p>
+    </div>
+
+    <div class="success-alert" th:if="${param.status[0] == 'step9'}">
+        <p>You have completed all of the required steps to set up your project.</p>
+        <p>Your project will begin on 15th March 2018.</p>
     </div>
 
     <div id="tasks-container" class="tabs">
@@ -99,7 +104,7 @@
                     <li class="require-action" th:if="${param.status == null or param.status[0] == 'step1' or param.status[0] == 'step2'}">
                         <div class="task">
                             <h2 class="heading-small">
-                                <a href="#">Other documents</a>
+                                <a href="/prototypes/IFS-1984-ps-other-documents">Other documents</a>
                             </h2>
                             <p class="no-margin">
                                 The Project Manager must upload these documents to set up the project.
@@ -114,7 +119,7 @@
                     <li class="require-action" th:if="${param.status[0] == 'step3'}">
                         <div class="task">
                             <h2 class="heading-small">
-                                <a href="#">Finance checks</a>
+                                <a href="/prototypes/IFS-1984-ps-finance-checks">Finance checks</a>
                             </h2>
                             <p class="no-margin">
                                 You have a pending finance query to respond to.
@@ -129,7 +134,7 @@
                     <li class="require-action" th:if="${param.status[0] == 'step5'}">
                         <div class="task">
                             <h2 class="heading-small">
-                                <a href="#">Spend profile</a>
+                                <a href="/prototypes/IFS-1984-ps-spend-profile">Spend profile</a>
                             </h2>
                             <p class="no-margin">
                                 Each organisation must submit their spend profile to the lead for review by Innovate UK.
@@ -144,7 +149,7 @@
                     <li class="require-action" th:if="${param.status[0] == 'step7'}">
                         <div class="task">
                             <h2 class="heading-small">
-                                <a href="#">Grant offer letter</a>
+                                <a href="/prototypes/IFS-1984-ps-grant-offer-letter">Grant offer letter</a>
                             </h2>
                             <p class="no-margin">
                                 The Project Manager must sign and upload the grant offer letter.
@@ -271,13 +276,13 @@
 
             <div class="progress-list progress-list--individual-blocks">
                 <ul>
-                    <li class="complete" th:if="${param.status != null and param.status[0] == 'detailsComplete'}">
+                    <li class="complete">
                         <div class="task">
                             <h2 class="heading-small">
                                 <a href="/prototypes/IFS-1984-project-details">Project details</a>
                             </h2>
                             <p class="no-margin">
-                                Your project details are complete. You can edit these up until the spend profile is generated.
+                                Your project details have been completed for each organisation.
                             </p>
                         </div>
                         <div class="status">
@@ -286,7 +291,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="complete">
+                    <li class="complete" th:unless="${param.status[0] == 'step1'}">
                         <div class="task">
                             <h2 class="heading-small">
                                 <a href="#">Monitoring officer</a>
@@ -301,24 +306,137 @@
                             </div>
                         </div>
                     </li>
+                    <li class="complete" th:unless="${param.status[0] == 'step1' or param.status[0] == 'step2'}">
+                        <div class="task">
+                            <h2 class="heading-small">
+                                <a href="#">Bank details</a>
+                            </h2>
+                            <p class="no-margin">
+                                Your bank details have been approved by Innovate UK.
+                            </p>
+                        </div>
+                        <div class="status">
+                            <div class="status-msg msg-progress">
+                                <span class="status-complete">Complete</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="complete" th:unless="${param.status[0] == 'step1' or param.status[0] == 'step2' or param.status[0] == 'step3'}">
+                        <div class="task">
+                            <h2 class="heading-small">
+                                <a href="#">Other documents</a>
+                            </h2>
+                            <p class="no-margin">
+                                Your documents have been uploaded and approved by Innovate UK.
+                            </p>
+                        </div>
+                        <div class="status">
+                            <div class="status-msg msg-progress">
+                                <span class="status-complete">Complete</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="complete" th:unless="${param.status[0] == 'step1' or param.status[0] == 'step2' or param.status[0] == 'step3' or param.status[0] == 'step4'}">
+                        <div class="task">
+                            <h2 class="heading-small">
+                                <a href="#">Finance checks</a>
+                            </h2>
+                            <p class="no-margin">
+                                Your finances have been approved by Innovate UK.
+                            </p>
+                        </div>
+                        <div class="status">
+                            <div class="status-msg msg-progress">
+                                <span class="status-complete">Complete</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="complete" th:if="${param.status[0] == 'step7' or param.status[0] == 'step8' or param.status[0] == 'step9'}">
+                        <div class="task">
+                            <h2 class="heading-small">
+                                <a href="#">Spend profile</a>
+                            </h2>
+                            <p class="no-margin">
+                                Your spend profile has been approved by Innovate UK.
+                            </p>
+                        </div>
+                        <div class="status">
+                            <div class="status-msg msg-progress">
+                                <span class="status-complete">Complete</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="complete" th:if="${param.status[0] == 'step9'}">
+                        <div class="task">
+                            <h2 class="heading-small">
+                                <a href="#">Grant offer letter</a>
+                            </h2>
+                            <p class="no-margin">
+                                Your grant offer letter has been signed and approved by Innovate UK.
+                            </p>
+                        </div>
+                        <div class="status">
+                            <div class="status-msg msg-progress">
+                                <span class="status-complete">Complete</span>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </section>
     </div>
 
-    <!-- END OFHARDCODED PROTOTYPE HTML -->
+    <!-- END OF HARDCODED PROTOTYPE HTML -->
 
     <th:block th:insert="fragments/layout :: main-content-end" />
 </main>
 
 <th:block th:insert="fragments/layout :: footer" />
 <th:block th:insert="fragments/layout :: body-end" />
-<script src="/js/ifs_prototype/jquery.waypoints.min.js" type="text/javascript"></script>
 <script src="/js/ifs_prototype/prototype.js" type="text/javascript"></script>
-<script type="text/javascript">
-	// <![CDATA[
-
-	// ]]>
-</script>
+<th:block th:if="${param.status[0] == 'step4'}">
+    <script type="text/javascript">
+        // <![CDATA[
+        jQuery(document).ready(function() {
+            setTimeout(function () {
+                window.location.href = "/prototypes/IFS-1984-ps-dashboard-steps?status=step5";
+            }, 20000);
+        });
+        // ]]>
+    </script>
+</th:block>
+<th:block th:if="${param.status[0] == 'step5a'}">
+    <script type="text/javascript">
+        // <![CDATA[
+        jQuery(document).ready(function() {
+            setTimeout(function () {
+                window.location.href = "/prototypes/IFS-1984-ps-dashboard-steps?status=step6";
+            }, 10000);
+        });
+        // ]]>
+    </script>
+</th:block>
+<th:block th:if="${param.status[0] == 'step6'}">
+    <script type="text/javascript">
+        // <![CDATA[
+        jQuery(document).ready(function() {
+            setTimeout(function () {
+                window.location.href = "/prototypes/IFS-1984-ps-dashboard-steps?status=step7";
+            }, 10000);
+        });
+        // ]]>
+    </script>
+</th:block>
+<th:block th:if="${param.status[0] == 'step8'}">
+    <script type="text/javascript">
+        // <![CDATA[
+        jQuery(document).ready(function() {
+            setTimeout(function () {
+                window.location.href = "/prototypes/IFS-1984-ps-dashboard-steps?status=step9";
+            }, 10000);
+        });
+        // ]]>
+    </script>
+</th:block>
 </body>
 </html>
