--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/form-elements.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/form-elements.html
@@ -56,6 +56,9 @@
 
             <h4 class="heading-small no-margin">Accepted appendix file types</h4>
             <ul>
+                <!-- /*
+                TODO: IFS-2959 - Remove the strings.replace
+                */-->
                 <li th:text="${#strings.replace(allowedFileType.getDisplayName(),'Spreadsheet','spreadsheet')}" th:each="allowedFileType : ${formInput.allowedFileTypes}">
                     PDF
                 </li>
