IFS-2854 Initial commit

--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/finance.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/finance.html
@@ -262,6 +262,43 @@
         </div>
     </th:block>
 
+    <!-- ===========================View: assessor_detailed_finance =========================== -->
+    <th:block th:fragment="assessment_detailed_finance(model)">
+        <h2 class="heading-medium">Detailed finances</h2>
+
+        <section class="collapsible" th:each="projectCostSection : ${detailedCostings.defaultProjectCostSections}">
+            <h2>
+                <th:block th:text="${projectCostSection.applicantSection.section.name}" ></th:block>
+                <span th:attr="data-mirror='#section-total-'+${projectCostSection.applicantSection.section.id}" ></span>
+            </h2>
+            <div class="collapsible-content">
+                <th:block th:each="costViewModel : ${projectCostSection.costViews}">
+                    <th:block th:if="${costViewModel.formInput.type.displayableFinanceType}">
+                        <th:block th:insert="finance/finance :: ${costViewModel.formInput.type.nameLower} (${costViewModel})" ></th:block>
+                    </th:block>
+                    <th:block th:if="${costViewModel.formInput.type.displayableQuestionType}">
+                        <th:block th:insert="question-type/types :: ${costViewModel.formInput.type.nameLower} (${costViewModel})" ></th:block>
+                    </th:block>
+                </th:block>
+            </div>
+        </section>
+
+        <div class="grid-row total-cost">
+            <div class="column-half">
+                <label for="total-cost" class="heading-medium">Total project costs</label>
+            </div>
+            <div class="column-half alignright">
+                <input type="text"
+                       id="total-cost"
+                       readonly="readonly"
+                       class="heading-medium width-full alignright"
+                       data-calculation-fields="[id*=section-total]"
+                       data-calculation-operations="+"
+                       th:value="'£' + ${#numbers.formatInteger(organisationFinanceTotal, 0, 'DEFAULT')}"/>
+            </div>
+        </div>
+    </th:block>
+
     <!-- ===========================Form: labour =========================== -->
     <th:block th:fragment="labour (costViewModel)">
         <p th:text="${costViewModel.question.description}"></p>
