--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/edit-duration.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/edit-duration.html
@@ -23,7 +23,7 @@
     <dt>Start date</dt>
     <dd th:text="${#temporals.format(model.project.targetStartDate, 'd MMM yyyy')}"></dd>
   </dl>
-  <form th:action="@{/competition/{competitionId}/project/{projectId}/update-duration/3(competitionId=${model.competitionId},projectId=${model.project.id})}"
+  <form th:action="@{/competition/{competitionId}/project/{projectId}/update-duration(competitionId=${model.competitionId},projectId=${model.project.id})}"
         method="post">
     <div class="form-group">
       <label for="durationInMonths">
