IFS-2854 Update for various improvements to academic finances and in general

--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/your-finances-sub-sections.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/your-finances-sub-sections.html
@@ -211,7 +211,7 @@
     </th:block>
 
     <th:block th:fragment="assessment_finances(model)">
-        <th:block th:insert="'finance/'+${model.financeView} :: assessment_detailed_finance(${model})" />
+        <th:block th:insert="'finance/'+${detailedCostings.financeView} :: assessment_detailed_finance(${model})" />
     </th:block>
 
     <th:block th:fragment="funding_finances(model)">
