--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessment/application-detailed-finances.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessment/application-detailed-finances.html
@@ -10,74 +10,44 @@
 
         <main tabindex="-1" id="content">
             <th:block th:insert="fragments/layout :: main-content-start" />
-            <th:block th:insert="fragments/assessment :: assessment-header-sub (linkTitle='Back to your assessment overview',linkClass='link-back',linkUrl=@{/{id}(id=${model.assessmentId})})" />
+            <th:block th:insert="fragments/assessment :: assessment-header-sub (linkTitle='Back to finance overview',linkClass='link-back',linkUrl=@{/{id}/finances(id=${model.assessmentId})})" />
 
             <th:block th:with="applicationName=${#strings.isEmpty(model.applicationName)} ? #{ifs.application.no_title} : ${model.applicationName}">
-                <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle='Funding',subTitle=${applicationName},size='heading-xlarge'" />
+                <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle='Finances',subTitle=${applicationName},size='heading-xlarge'" />
             </th:block>
 
+            <h2 class="heading-medium" th:text="${applicationOrganisation.name} + ' (' + (${leadOrganisation} ? 'Lead ' : '') + 'Partner)'">Finances overview</h2>
+
             <h2 class="heading-medium">Finances overview</h2>
-            <div class="form-group finances-summary">
-                <div style="overflow: auto;">
-                    <table>
-                        <thead>
-                            <tr>
-                                <td />
-                                <th scope="col" class="numeric">Total costs</th>
-                                <th scope="col" class="numeric width-small">% Grant</th>
-                                <th scope="col" class="numeric width-small-medium">Funding sought (&pound;)</th>
-                                <th scope="col" class="numeric width-medium">Other public sector funding (&pound;)</th>
-                                <th scope="col" class="numeric width-small-medium">Contribution to project (&pound;)</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr th:each="applicationOrganisation : ${applicationOrganisations}">
-                                <th scope="row">
-                                    <div>
-                                        <div th:text="${applicationOrganisation.name}" />
-                                        <div th:if="${applicationOrganisation.id.equals(leadOrganisation.id)}">
-                                            <small>Lead organisation</small>
-                                        </div>
-                                        <div th:unless="${applicationOrganisation.id.equals(leadOrganisation.id)}">
-                                            <small>Partner</small>
-                                        </div>
-                                    </div>
-                                </th>
-                                <th:block th:with="organisationFinance=${organisationFinances.get(applicationOrganisation.id)}" th:if="${organisationFinances.containsKey(applicationOrganisation.id)}">
-                                    <td class="numeric bold">
-                                        &pound;<th:block th:text="${#numbers.formatInteger(organisationFinance.total, 0, 'DEFAULT')}" />
-                                    </td>
-                                    <td class="numeric" th:text="${organisationFinance.grantClaimPercentage}+'%'"/>
-                                    <td class="numeric">
-                                        <th:block th:text="${#numbers.formatInteger(organisationFinance.totalFundingSought, 0, 'DEFAULT')}" />
-                                    </td>
-                                    <td class="numeric">
-                                        <th:block th:text="${#numbers.formatInteger(organisationFinance.totalOtherFunding, 0, 'DEFAULT')}" />
-                                    </td>
-                                    <td class="numeric">
-                                        <th:block th:text="${#numbers.formatInteger(organisationFinance.totalContribution, 0, 'DEFAULT')}" />
-                                    </td>
-                                </th:block>
-                            </tr>
-                            <tr>
-                                <th scope="row">Total</th>
-                                <td class="numeric bold">
-                                    &pound;<th:block th:text="${#numbers.formatInteger(financeTotal, 0, 'DEFAULT')}" />
-                                </td>
-                                <td></td>
-                                <td class="numeric">
-                                    <th:block th:text="${#numbers.formatInteger(totalFundingSought, 0, 'DEFAULT')}" />
-                                </td>
-                                <td class="numeric">
-                                    <th:block th:text="${#numbers.formatInteger(totalOtherFunding, 0, 'DEFAULT')}" />
-                                </td>
-                                <td class="numeric">
-                                    <th:block th:text="${#numbers.formatInteger(totalContribution, 0, 'DEFAULT')}" />
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+            <div class="table-overflow">
+                <table class="table-overview">
+                    <thead>
+                    <tr>
+                        <th scope="col">Project duration</th>
+                        <th scope="col">Total costs</th>
+                        <th scope="col" class="numeric">% Grant</th>
+                        <th scope="col" class="numeric">Funding sought (&pound;)</th>
+                        <th:block th:unless="${detailedCostings.financeView == 'academic-finance'}">
+                            <th scope="col" class="numeric">Other public sector funding (&pound;)</th>
+                            <th scope="col" class="numeric">Contribution to project (&pound;)</th>
+                        </th:block>
+                    </tr>
+                    </thead>
+                    <th:block th:with="organisationFinance=${organisationFinances.get(applicationOrganisation.id)}" th:if="${organisationFinances.containsKey(applicationOrganisation.id)}">
+                    <tbody>
+                    <tr>
+                        <td th:text="${detailedCostings.application.durationInMonths+' months'}">15 months</td>
+                        <td class="numeric">&pound;<th:block th:text="${#numbers.formatInteger(organisationFinance.total,1,'DEFAULT')}">200,123</th:block></td>
+                        <td class="numeric" th:text="${#numbers.formatInteger(organisationFinance.grantClaimPercentage,1,'NONE')+'%'}">20%</td>
+                        <td class="numeric" th:text="${#numbers.formatInteger(organisationFinance.totalFundingSought,1,'DEFAULT')}">60,271</td>
+                        <th:block th:unless="${detailedCostings.financeView == 'academic-finance'}">
+                            <td class="numeric" th:text="${#numbers.formatInteger(organisationFinance.totalOtherFunding,1,'DEFAULT')}">2,468</td>
+                            <td class="numeric" th:text="${#numbers.formatInteger(organisationFinance.totalContribution,1,'DEFAULT')}">138,164</td>
+                        </th:block>
+                    </tr>
+                    </tbody>
+                    </th:block>
+                </table>
             </div>
 
             <th:block th:include="finance/your-finances-sub-sections :: assessment_finances (${model})" />
