--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/academic-finance.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/academic-finance.html
@@ -289,43 +289,11 @@
 </th:block>
 
 <th:block th:fragment="assessment_detailed_finance (model)" th:with="question=${detailedCostings.applicantQuestion.question}, userOrganisation=${detailedCostings.currentApplicant.organisation}, readonly=${detailedCostings.allReadOnly or detailedCostings.complete}">
-    <h2 class="heading-medium no-margin" th:text="${#strings.replace(question.name,'{organisationName}',userOrganisation.name)}"/>
-    <p ifs:utext="${question.description}"/>
-    <fieldset>
-        <h2 class="heading-medium">Innovate UK funding</h2>
-        <legend class="visuallyhidden">Innovate UK (TSB) contribution</legend>
-        <p>Innovate UK is the new name for the Technology Strategy Board (TSB).</p>
 
-        <p>To receive Innovate UK funding, your academic organisation must apply for funding through the Je-S system. To find out more about the Je-S requirements and processes please go to the <a href="https://je-s.rcuk.ac.uk/" rel="external">Je-S website</a>.</p>
-
-        <p>All finances need to be provided before this application can be submitted. If there are any finances outstanding at the competition deadline this
-            application will not be submitted into this competition.</p>
-
-        <h3 class="heading-small">Your project costs</h3>
-
-        <p>Provide key figures from the Je-S form here to allow your partners to see the overall project costs and contribution required from Innovate
-            UK</p>
-        <p>Enter the figures from the following fields on the Je-S form:</p>
-        <div class="form-group" th:classappend="${#fields.hasErrors('${form.formInput[cost-' + academicFinance.tsbReference?.id + '-item]}')} ? 'form-group-error'">
-            <label class="form-label" th:for="|formInput[cost-${academicFinance.tsbReference?.id}-item]|">
-                <span class="form-label-bold">TSB reference</span>
-                <span class="form-hint">This number is found at the top of your Je-S form</span>
-                <th:block th:insert="question-type/form-elements :: form-validation-messages (id=${'cost-' + academicFinance.tsbReference?.id + '-item'})" />
-            </label>
-            <input type="text"
-                   class="form-control"
-                   th:name="${'cost-' + academicFinance.tsbReference?.id + '-tsb_reference'}"
-                   th:id="|formInput[cost-${academicFinance.tsbReference?.id}-item]|"
-                   th:value="${academicFinance.tsbReference?.value}"
-                   th:readonly="${readonly}"
-                   required="required"
-                   th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.tsbReference?.id +'item]}')} ? 'form-control-error'" />
-        </div>
-    </fieldset>
     <fieldset class="academic">
-        <h2 class="heading-medium no-margin">Financial resources</h2>
+        <h2 class="heading-medium">Financial resources</h2>
         <legend class="visuallyhidden">Financial resources</legend>
-        <p>Please enter the following costs from the summary of resources section on your Je-S form</p>
+        <p>The following costs are entered by the organisation from the summary of resources section on your Je-S form</p>
 
         <div class="grid-row">
             <div class="column-third"><strong>Directly incurred</strong></div>
@@ -403,13 +371,11 @@
         </div>
     </fieldset>
 
-
     <fieldset>
 
         <legend class="visuallyhidden">Directly allocated</legend>
         <strong>Directly allocated</strong>
         <hr class="underline"/>
-
 
         <div class="grid-row">
             <div class="form-group" th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.allocatedInvestigators?.id +'-cost]}')} ? 'form-group-error'">
@@ -583,7 +549,8 @@
          removeName='remove_finance_document',
          saveName='upload_finance_document'">
     <div class="upload-section">
-        <h3 class="heading-small no-margin" th:text="${formInput.getDescription()}">Upload a pdf copy of the Je-S output form once you have a status of 'With Council'.</h3>
+        <h3 th:if="${viewmode=='edit'}" class="heading-small no-margin" th:text="${formInput.getDescription()}">Upload a pdf copy of the Je-S output form once you have a status of 'With Council'.</h3>
+        <h3 th:if="${viewmode=='readonly'}" class="heading-small no-margin" th:text="'Download Je-S form'">Download Je-S form</h3>
         <p th:if="${viewmode=='edit'}" ifs:utext="${question.description}"></p>
         <th:block th:insert="question-type/types :: fileupload-fragment(${viewmode},${downloadUrl},${filename},${inputField},${validationField},${mayRemove},${removeName},${saveName})" th:with="autoSaveOff=true" />
     </div>
