IFS-2313 Add min value client validation

--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/edit-duration.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/edit-duration.html
@@ -33,7 +33,8 @@
              id="durationInMonths"
              type="number"
              class="form-control width-small"
-             required="required" />
+             required="required"
+             min="1" />
       <span>months</span>
     </div>
     <button type="submit" class="button">Save and return to finances</button>
