IFS-2313-Edit-Project-Duration
Hide the Edit link once the spend profile has been generated.

Change-Id: I2a4252695d956ccf19754f44c134d9f32224c8ec

--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/financecheck/summary.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/financecheck/summary.html
@@ -46,7 +46,10 @@
         <dt>Duration</dt>
         <dd th:text="${model.financeCheckSummaryResource.durationInMonths+' months'}"></dd>
       </dl>
-      <a th:href="@{/competition/{competitionId}/project/{projectId}/edit-duration(competitionId=${model.financeCheckSummaryResource.competitionId},projectId=${model.financeCheckSummaryResource.projectId})}">Edit</a>
+
+      <th:block th:unless="${model.financeCheckSummaryResource.spendProfilesGenerated}">
+        <a th:href="@{/competition/{competitionId}/project/{projectId}/edit-duration(competitionId=${model.financeCheckSummaryResource.competitionId},projectId=${model.financeCheckSummaryResource.projectId})}">Edit</a>
+      </th:block>
     </div>
   </div>
 
