--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessment/application-detailed-finances.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessment/application-detailed-finances.html
@@ -10,7 +10,7 @@
 
         <main tabindex="-1" id="content">
             <th:block th:insert="fragments/layout :: main-content-start" />
-            <th:block th:insert="fragments/assessment :: assessment-header-sub (linkTitle='Back to finance overview',linkClass='link-back',linkUrl=@{/{id}/finances(id=${model.assessmentId})})" />
+            <th:block th:insert="fragments/assessment :: assessment-header-sub (linkTitle='Back to funding',linkClass='link-back',linkUrl=@{/{id}/finances(id=${model.assessmentId})})" />
 
             <th:block th:with="applicationName=${#strings.isEmpty(model.applicationName)} ? #{ifs.application.no_title} : ${model.applicationName}">
                 <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle='Finances',subTitle=${applicationName},size='heading-xlarge'" />
