--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessment/application-detailed-finances.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessment/application-detailed-finances.html
@@ -24,7 +24,7 @@
                     <thead>
                     <tr>
                         <th scope="col">Project duration</th>
-                        <th scope="col">Total costs</th>
+                        <th scope="col" class="numeric">Total costs</th>
                         <th scope="col" class="numeric">% Grant</th>
                         <th scope="col" class="numeric">Funding sought (&pound;)</th>
                         <th:block th:unless="${detailedCostings.financeView == 'academic-finance'}">
