IFS-3005 using html from the message body.

--- a/ifs-data-layer/ifs-data-service/src/main/java/org/innovateuk/ifs/notifications/templates/notifications/email/invite_assessor_group_to_interview_text_html.html
+++ b/ifs-data-layer/ifs-data-service/src/main/java/org/innovateuk/ifs/notifications/templates/notifications/email/invite_assessor_group_to_interview_text_html.html
@@ -11,7 +11,7 @@
         <p>Please visit our online Innovation Funding Service to respond to this request.</p>
 
         <p style="margin: 0 0 1em 0;">
-            ${customTextHtml?no_esc}
+            ${message?no_esc}
         </p>
 
         <p>Yours sincerely,</p>
